--- a/src/components/right/sharedMedia/WebLink.scss
+++ b/src/components/right/sharedMedia/WebLink.scss
@@ -51,7 +51,6 @@
 
   .site-name,
   .site-description,
-  .site-link,
   .site-title {
     word-break: break-word;
   }
